..F....... [ZBX-8698] fixed spacing between the filter buttons
git-svn-id: svn://svn.zabbix.com/branches/dev@49835 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-8698/frontends/php/styles/default.css
+++ b/ZBX-8698/frontends/php/styles/default.css
@@ -472,6 +472,7 @@ table.filter .host-inventories .select,
 table.filter .host-inventories .text { vertical-align: middle; }
 table.filter tr.item-list-row { height: 26px; }
 table.filter-center tr td { text-align: center; }
+table.filter .ui-button { margin-right: 3px; }
 
 table.filter.sub-filter tr td { text-align: left; }
 table.filter.sub-filter tr td:first-child { width: 8%; }
